infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: expiration-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: expiration
 template:
  metadata:
   labels:
    app: expiration
  spec:
   containers:
    - name: expiration
      image: yordi23/expiration
